# CT2_Updated

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  test.py  train.py
configs/: paths.yaml
scripts/: eval_colorfulness.sh  eval_fid.sh  eval_metrics.sh  inference.sh  make_q_actual.sh  train.sh
segm/: config.py  config.yml  engine.py  eval_fid.py  eval_metrics.py  make_q_actual.py  metrics.py
segm/data/: coco.py  random.py
segm/model/: factory.py  utils.py
segm/utils/: distributed.py  logger.py  torch.py
